--- a/SamplePages/SamplePages.csproj
+++ b/SamplePages/SamplePages.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>d2d0980e-35fa-42de-bea9-576ffd7b47ff</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
