--- a/FantasticApp/.graphqlrc.json
+++ b/FantasticApp/.graphqlrc.json
@@ -3,8 +3,8 @@
   "documents": "**/*.graphql",
   "extensions": {
     "strawberryShake": {
-      "name": "SamplePagesClient",
-      "namespace": "SamplePages.GraphQL",
+      "name": "FantasticAppClient",
+      "namespace": "FantasticApp.GraphQL",
       "url": "http://localhost:5000/graphql/",
       "records": {
         "inputs": false,
